# Backend

./: .gitignore  Dockerfile  LICENCE.md  README.md  app.py  pyproject.toml
app/: __init__.py
app/config/: __init__.py
app/config/env_config/: __init__.py  config.py  development.py  production.py
app/config/log/: __init__.py  log.py
app/controller/: __init__.py
app/controller/auth/: auth_controller.py
app/controller/dashboard/: ai_worksapace_controller.py
app/controller/dashboard/admin/: donation_admin_controller.py
app/controller/dashboard/user/: donation_user_controller.py
app/expection/: __init__.py  error_exception.py  user_chat_exception.py
app/expection/catch_group/: workspace_catch_group_exception.py
app/infrastructure/: donation_schema.py  user_schema.py
app/integration/: ai_workspace_integration.py  check_user_integration.py  payu_integration.py  wompi_integration.py
app/integration/shared/: __init__.py  base_integration.py
app/middleware/: __init__.py
app/middleware/request/: request.py
app/model/: donation_model.py  user_model.py
app/provider/request/: request.py
app/route/: __init__.py  auth_route.py
app/route/cookie/: sys.py
app/route/dashboard/: ai_worksapace_route.py
app/route/dashboard/user/: donation_user_route.py
app/route/error/: error_handler.py
app/service/: invoice_service.py  user_chat_service.py
app/service/chat/: user_chat_service.py
app/service/check_user/: __init__.py  check_user.py
app/utils/: client_fingerprint.py  init_lifespan.py
app/utils/cors/: README.md  config.py  cors.py  types.py
(+3 files in other folders)
