[project]
name = "backend"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authsys",
    "authsysfa",
    "fastapi[standard]>=0.120.4",
    "krelego",
    "nexilum>=0.0.6",
    "ornator",
    "requests>=2.32.5",
]

[tool.uv.sources]
krelego = { path = "libs/krelego-1.0.3.tar.gz" }
authsys = { path = "libs/authsys-2.0.5.tar.gz" }
authsysfa = { path = "libs/authsysfa-2.3.2.tar.gz" }
ornator = { path = "libs/ornator-2.6.5.tar.gz" }
